# Memplace

./: .env.example  .gitignore  CHANGELOG.md  CHANGELOG_V5.md  CONTRIBUTING.md  Dockerfile.mempalace  README.md  SECURITY.md  entities.json  http_server.py  mempalace.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml
mempalace/: README.md  __init__.py  __main__.py  cli.py  cli.py.bak  closet_llm.py  collision_scan.py  config.py  convo_miner.py  dedup.py  dialect.py  diary_ingest.py  dynamics.py  embedding.py  entity_detector.py  exporter.py  format_miner.py  hallways.py  hooks_cli.py  ids.py  knowledge_graph.py  layers.py  mcp_server.py  mcp_tools.py  migrate.py  miner.py  palace.py  palace_graph.py  qdrant_bridge.py  repair.py  searcher.py  service.py  spellcheck.py  sweeper.py  sync.py  version.py  wal.py
mempalace/backends/: __init__.py  _sidecar.py  base.py  embedding_wrapper.py  pgvector.py  qdrant.py  registry.py
mempalace/cli/: __init__.py  _init.py  _main.py  _mine.py  _misc.py  _repair.py  _search.py  _status.py
mempalace/instructions/: help.md
mempalace/miner/: __init__.py  _chunking.py  _config.py  _dates.py  _drawers.py  _entities.py  _gitignore.py  _mine.py  _processing.py  _readable.py  _rooms.py  _status.py
mempalace/sources/: base.py  context.py
scripts/: PRE_COMMIT_README.md  check_qdrant.py  embed_all.py  embed_remaining.py  fix_threshold.py  pre_commit_check.py  test_embed.py  test_search.py
tests/: conftest.py  test_core.py  test_mcp_server.py  test_qdrant_bridge.py
