[project]
name = "mempalace"
version = "5.0.0"
description = "Multi-Wing Memory Palace — Qdrant-backed knowledge management for AI assistants"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Truong Cong Dinh"},
]
keywords = [
    "ai", "memory", "qdrant", "mcp", "vector-database",
    "knowledge-management", "embeddings", "meilin",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28,<3",
    "pyyaml>=6.0,<7",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4.0"]

[project.urls]
Homepage = "https://github.com/truongcongdinh97/Memplace"
Repository = "https://github.com/truongcongdinh97/Memplace"
"Bug Tracker" = "https://github.com/truongcongdinh97/Memplace/issues"

[project.scripts]
mempalace = "mempalace.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mempalace"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "C901"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]